--- a/SiaMVC/build.gradle
+++ b/SiaMVC/build.gradle
@@ -16,6 +16,7 @@ dependencies {
 	compile "com.h2database:h2:$h2Version"
 	compile "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
 	compile "org.apache.commons:commons-lang3:$commonsLangVersion"
+    compile "org.thymeleaf:thymeleaf-spring4:$thymeleafVersion"
 
     compile "javax.servlet:jstl:$jstlVersion"
     providedCompile "javax.servlet:javax.servlet-api:$servletApiVersion"
