--- a/SiaMVC/build.gradle
+++ b/SiaMVC/build.gradle
@@ -18,6 +18,8 @@ dependencies {
 	compile "org.apache.commons:commons-lang3:$commonsLangVersion"
     compile "org.thymeleaf:thymeleaf-spring4:$thymeleafVersion"
 
+    compile "commons-fileupload:commons-fileupload:1.3"
+
     compile "javax.servlet:jstl:$jstlVersion"
     providedCompile "javax.servlet:javax.servlet-api:$servletApiVersion"
     providedCompile "javax.servlet.jsp:jsp-api:$jspApiVersion"
